--- a/manifest.json
+++ b/manifest.json
@@ -15,18 +15,18 @@
       "matches": [
         "*://*.atlassian.net/jira/software/*"
       ],
-      "js": ["content.js"],
-      "css": ["styles.css"],
+      "js": ["content/content.js"],
+      "css": ["content/styles.css"],
       "run_at": "document_idle"
     }
   ],
   "icons": {
-    "16": "icon16.png",
-    "48": "icon48.png",
-    "128": "icon128.png"
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
   },
   "action": {
-    "default_popup": "popup.html",
+    "default_popup": "popup/popup.html",
     "default_title": "JIRA Sprint Details Settings"
   }
 }
